--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="../node_modules/flyonui/flyonui.js"></script>
   </body>
 </html>
